infra/kubernetes/local/application/runtimes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signaltrade
  namespace: signaltrade
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: signaltrade.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
